fix accordion titles with multiple words get cut off

--- a/frontend/src/styles.sass
+++ b/frontend/src/styles.sass
@@ -408,6 +408,8 @@ tbody
   td
     outline: none
 
+.mat-expansion-panel-header-title
+  flex-grow: 1 !important
 
 ///////////////////////////////////////////////////////////////
 // Dialoge
